Refactor title, link to home page, add image of lasagna, add description

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lasagna</title>
+    <title>Recipe Page</title>
 </head>
 <body>
-    <h1></h1>    
+    <h1>Lasagna</h1> 
+    <a href="../index.html">Home Page</a>   
+    <img src="../img/lasagna.jpg" alt="image of the cookked dish, lasagna">
+    <p>In this classic lasagna recipe, sheets of pasta are layered with a cheesy filling, a rich meaty tomato sauce, and more cheese and then baked until bubbly and browned.</p>
 </body>
 </html>
