Add unordered list of ingredients and ordered list of steps to lasagna recipe

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -10,5 +10,24 @@
     <a href="../index.html">Home Page</a>   
     <img src="../img/lasagna.jpg" alt="image of the cookked dish, lasagna">
     <p>In this classic lasagna recipe, sheets of pasta are layered with a cheesy filling, a rich meaty tomato sauce, and more cheese and then baked until bubbly and browned.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Cheese filling</li>
+        <li>Meat</li>
+        <li>Sauce</li>
+        <li>Spinach</li>
+        <li>Onion</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Heat oven to 400 degrees</li>
+        <li>Brown the meat and onions</li>
+        <li>Prepare the baking dish and assemble the sauce</li>
+        <li>Begin layering the lasagna</li>
+        <li>Bake the lasagna for 1 hour</li>
+        <li>Sprinkle the cheese and finish baking</li>
+        <li>Cool the lasagna for 10 minutes</li>
+        <p>And voila!</p>
+    </ol>
 </body>
 </html>
