--- a/recipes/potatosalad.html
+++ b/recipes/potatosalad.html
@@ -9,6 +9,19 @@
     <h1>Potato Salad</h1>    
     <a href="../index.html">Home Page</a>
     <img src="../img/potatosalad.jpg" alt="image of THE potatosalad">
+    <p>Potato salad is a popular dish made from boiled potatoes, typically mixed with a dressing, and often including other ingredients like hard-boiled eggs, celery, onions, and pickles. It's commonly served as a side dish, especially during summer barbecues and picnics. The dressing often consists of mayonnaise, mustard, and seasonings like salt and pepper</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>potatoes</li>
+        <li>Mayonnaise</li>
+        <li>Mustard</li>
+        <p>Optional</p>
+        <li>Celery</li>
+        <li>Onion</li>
+        <li>Pickles</li>
+        <li>Vinegar</li>
+    </ul>
+    <h2>Steps</h2>
     
 </body>
 </html>
