Refactor ingredients and add ordered list for preparing potatosalad

--- a/recipes/potatosalad.html
+++ b/recipes/potatosalad.html
@@ -12,9 +12,10 @@
     <p>Potato salad is a popular dish made from boiled potatoes, typically mixed with a dressing, and often including other ingredients like hard-boiled eggs, celery, onions, and pickles. It's commonly served as a side dish, especially during summer barbecues and picnics. The dressing often consists of mayonnaise, mustard, and seasonings like salt and pepper</p>
     <h2>Ingredients</h2>
     <ul>
-        <li>potatoes</li>
+        <li>Potatoes</li>
         <li>Mayonnaise</li>
         <li>Mustard</li>
+        <li>Salt and pepper</li>
         <p>Optional</p>
         <li>Celery</li>
         <li>Onion</li>
@@ -22,6 +23,14 @@
         <li>Vinegar</li>
     </ul>
     <h2>Steps</h2>
+    <ol>
+        <li>Add potatoes, tablespoon of salt, and water to bring to a boil</li>
+        <li>Drain the potatoes</li>
+        <li>Prepare sauce by whisking together mayonnaise, sugar, vingar, and mustard</li>
+        <li>Add potatoes, onion, celery, and the sauce prepared earlier</li>
+        <li>Stir to combine and add salt and pepper</li>
+        <p>And Voila!</p>      
+    </ol>
     
 </body>
 </html>
