--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/lasagna.html">Lasagna</a>
+
+    <ul>
+        <li><a href="recipes/lasagna.html"></a>Lasagna</li>
+        <li><a href="recipes/potatosalad.html"></a>Potato Salad</li>
+        <li><a href="recipes/cake.html"></a>Cake</li>
+    </ul>
 </body>
 </html>
