--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="recipes/lasagna.html"></a>Lasagna</li>
+        <li><a href="recipes/lasagna.html" target="_blank" rel="noopener noreferrer"></a>Lasagna</li>
         <li><a href="recipes/potatosalad.html"></a>Potato Salad</li>
         <li><a href="recipes/cake.html"></a>Cake</li>
     </ul>
