Reformatt blurb for style

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -27,7 +27,7 @@
         <li>Bake the lasagna for 1 hour</li>
         <li>Sprinkle the cheese and finish baking</li>
         <li>Cool the lasagna for 10 minutes</li>
-        <p>And voila!</p>
     </ol>
+    <p>And Voila! Frost and enjoy!</p>
 </body>
 </html>
