--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -28,6 +28,6 @@
         <li>Sprinkle the cheese and finish baking</li>
         <li>Cool the lasagna for 10 minutes</li>
     </ol>
-    <p>And Voila! Frost and enjoy!</p>
+    <p>And Voila!</p>
 </body>
 </html>
