--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main Page</title>
-    <link ref="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
+    <h1 class="main-title">Odin Recipes</h1>
+    <ul class="main-list">
         <li><a href="recipes/lasagna.html" target="_blank" rel="noopener noreferrer">Lasagna</a></li>
         <li><a href="recipes/potatosalad.html">Potato Salad</a></li>
         <li><a href="recipes/cake.html">Cake</a></li>
