--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,12 +7,14 @@
     <link rel="stylesheet" href="lasagnastyle.css">
 </head>
 <body>
-    <h1>Lasagna</h1> 
-    <a href="../index.html">Home Page</a>   
+    <h1 class="front-heading"><strong>Lasagna</strong></h1> 
+    <div>
+    <a href="../index.html" class="back-to-home">Home Page</a>
+    </div>   
     <img src="../img/lasagna.jpg" alt="image of the cookked dish, lasagna">
-    <p>In this classic lasagna recipe, sheets of pasta are layered with a cheesy filling, a rich meaty tomato sauce, and more cheese and then baked until bubbly and browned.</p>
+    <p class="collapse">In this classic lasagna recipe, sheets of pasta are layered with a cheesy filling, a rich meaty tomato sauce, and more cheese and then baked until bubbly and browned.</p>
     <h2>Ingredients</h2>
-    <ul>
+    <ul class="ingredient-list">
         <li>Cheese filling</li>
         <li>Meat</li>
         <li>Sauce</li>
@@ -20,7 +22,7 @@
         <li>Onion</li>
     </ul>
     <h2>Steps</h2>
-    <ol>
+    <ol class="steps-list">
         <li>Heat oven to 400 degrees</li>
         <li>Brown the meat and onions</li>
         <li>Prepare the baking dish and assemble the sauce</li>
@@ -29,6 +31,6 @@
         <li>Sprinkle the cheese and finish baking</li>
         <li>Cool the lasagna for 10 minutes</li>
     </ol>
-    <p>And Voila!</p>
+    <span class="super">And Voila!</span>
 </body>
 </html>
